fix(header): overflow cropped in info etab

--- a/packages/webcomponents/header/src/components/info-etab/layout/style.scss
+++ b/packages/webcomponents/header/src/components/info-etab/layout/style.scss
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  margin: -16px;
+  padding: 16px;
 
   > .image-container {
     flex: 0 0 auto;
